@startuml

title __REGISTRIEREN's Class Diagram__\n

  namespace com.example.edelhome {
    namespace ui.Registrieren {
      class com.example.edelhome.ui.Registrieren.RegistrierenFragment {
          - btn_abbrechen : Button
          - email : EditText
          - firebaseDatabase : FirebaseDatabase
          - mAuth : FirebaseAuth
          - myRef : DatabaseReference
          - nachname : EditText
          - password : EditText
          - tel : EditText
          - vName : EditText
          + onCreateView()
          + onStart()
      }
    }
  }
  

  namespace com.example.edelhome {
    namespace ui.Registrieren {
      class com.example.edelhome.ui.Registrieren.RegistrierenViewModel {
          - mText : MutableLiveData<String>
          + RegistrierenViewModel()
          + getText()
      }
    }
  }
  

  com.example.edelhome.ui.Registrieren.RegistrierenFragment -up-|> androidx.fragment.app.Fragment
  com.example.edelhome.ui.Registrieren.RegistrierenFragment o-- com.example.edelhome.ui.anmelden.AnmeldenFragment : anmeldenFragment
  com.example.edelhome.ui.Registrieren.RegistrierenFragment o-- com.example.edelhome.ui.anmelden.AnmeldenViewModel : anmeldenViewModel
  com.example.edelhome.ui.Registrieren.RegistrierenFragment o-- com.example.edelhome.ui.Registrieren.RegistrierenFragment : registrierenFragment
  com.example.edelhome.ui.Registrieren.RegistrierenFragment o-- com.example.edelhome.ui.Registrieren.RegistrierenViewModel : registrierenViewModel
  com.example.edelhome.ui.Registrieren.RegistrierenViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
